# ai-doctor-de-project

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  pyproject.toml  render.yaml  run.py
apps/api/: admin.py  auth.py  config.py  firebase_app.py  main.py  pricing.py  profile.py  sessions.py  wallet.py
apps/api/llm/: router.py
apps/api/pdn/: engine.py  entropy.py  narrowing.py  red_flags.py
apps/api/rag/: __init__.py  cli.py  embed.py  models.py  seed.py  store.py
apps/api/rag/pipelines/: icd10.py  medlineplus.py
apps/web/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts
apps/web/src/: AdminPanel.tsx  App.css  App.tsx  LoginScreen.tsx  SetupWizard.tsx  Wallet.tsx  charts.tsx  components.tsx  icons.tsx  index.css  mock.ts  types.ts  useAdmin.ts  useAuth.ts  useChat.ts  useProfile.ts  useSessions.ts  useSpeechRecognition.ts  useWallet.ts
apps/web/tests/: layout.spec.ts
data/seed/: medlineplus_cache.json
scripts/: list_gemini_embed.py  test_e2e_rag.py  test_embed.py  test_gemini.py  test_medlineplus.py  test_multi_turn.py
